--- a/.github/workflows/autotools.yaml
+++ b/.github/workflows/autotools.yaml
@@ -25,7 +25,7 @@ jobs:
         autoheader
         autoconf
         automake --add-missing
-        mkdir ../build
+        mkdir ${{ github.workspace }}/build
         echo "::set-env name=ERL_LIBS::${{ github.workspace }}/lib"
       working-directory: source
     - name: Install polymer
@@ -51,5 +51,7 @@ jobs:
         name: test
         path: build/test/log/
     - name: Release
-      run: make install
+      run: |
+          mkdir ${{ github.workspace }}/releases
+          make install
 
