--- a/.github/workflows/autotools.yaml
+++ b/.github/workflows/autotools.yaml
@@ -9,7 +9,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name Checkout
+      uses: actions/checkout@v2
       with:
         path: source
     - name: Install zj
@@ -18,6 +19,8 @@ jobs:
          git clone https://gitlab.com/zxq9/zj.git lib/zj
          cd lib/zj
          ./zmake
+         cd ..
+         mv zj zj-1.0.5
       working-directory: ${{ github.workspace }}
     - name: Maintainer operations
       run: |
@@ -36,22 +39,23 @@ jobs:
       run: ERLANG_INSTALL_LIB_DIR=${{ github.workspace }}/lib ../source/configure
     - name: Build
       run: make
-    - uses: actions/upload-artifact@v2
+    - name: Upload edoc
+      uses: actions/upload-artifact@v2
       with:
         name: doc
         path: build/doc/
     - name: Build dialyzer PLT
       run: dialyzer --build_plt --apps erts kernel stdlib mnesia inets syntax_tools xmerl zj
       continue-on-error: true
-    - name: Check
+    - name: Make check
       run: make check
       continue-on-error: true
-    - uses: actions/upload-artifact@v2
+    - name: Upload common_test
+      uses: actions/upload-artifact@v2
       with:
         name: test
         path: build/test/log/
-    - name: Release
+    - name: Make release
       run: |
-          mkdir ${{ github.workspace }}/releases
           make install
 
