--- a/.github/workflows/autotools.yaml
+++ b/.github/workflows/autotools.yaml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name Checkout
+    - name: Checkout
       uses: actions/checkout@v2
       with:
         path: source
