--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,17 +1,9 @@
 name: Docker Image CI
-
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+  release:
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
