--- a/.github/workflows/autotools.yaml
+++ b/.github/workflows/autotools.yaml
@@ -76,7 +76,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} 
-        asset_path: ./1.0.0.tar.gz
+        asset_path: ${{ github.workspace }}/releases/1.0.0.tar.gz
         asset_name: 1.0.0.tar.gz
         asset_content_type: application/gzip
 
