--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -6,5 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Download release
+      run: curl -sLO https://github.com/vances/usekeeper/archive/${{ github.ref }}.tar.gz
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag tempkeeper:$(date +%s)
+      run: docker build . --file Dockerfile --tag tempkeeper:${{ github.ref }}
+
